# Odyssey

./: CMakeLists.txt  grammar.md
include/: lexer.hpp  odyssey.hpp  parser.hpp  token.hpp  types.hpp
src/: main.cpp
src/lexer/: lexer.cpp
src/token/: token.cpp
